--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,12 @@
       @apply bg-background text-foreground;
     }
   }
+
+  #reportsNavbar{
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(143, 143, 143, 0.091);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+
+  }
