--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+  @tailwind base;
   @tailwind components;
   @tailwind utilities;
 
@@ -33,6 +33,7 @@
       --ring: 222.2 84% 4.9%;
 
       --radius: 0.5rem;
+      scroll-behavior: smooth;
     }
 
     .dark {
@@ -63,15 +64,18 @@
       --border: 217.2 32.6% 17.5%;
       --input: 217.2 32.6% 17.5%;
       --ring: 212.7 26.8% 83.9%;
+      scroll-behavior: smooth
     }
   }
 
   @layer base {
     * {
       @apply border-border;
+      scroll-behavior: smooth
     }
     body {
       @apply bg-background text-foreground;
+      scroll-behavior: smooth;
     }
   }
 
