--- a/app/globals.css
+++ b/app/globals.css
@@ -85,5 +85,12 @@
     background-color: rgba(143, 143, 143, 0.091);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
+  }
 
+  #secondNavbar{
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(143, 143, 143, 0.091);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
   }
