--- a/app/globals.css
+++ b/app/globals.css
@@ -79,18 +79,7 @@
     }
   }
 
-  #reportsNavbar{
-    backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(143, 143, 143, 0.091);
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-  }
 
-  #secondNavbar{
-    backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(143, 143, 143, 0.091);
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
+  .section-margin {
+    scroll-margin-top: 150px; /* Ajusta el valor según la altura de tu navbar */
   }
